--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-name: chart-ccd pipeline
+name: chart-finrem pipeline
 trigger:
   branches:
     include:
@@ -16,17 +16,16 @@ resources:
       endpoint: 'hmcts'
 
 jobs:
-# IGNORE ANY VALIDATION FOR NOW
-#  - job: Validate
-#    pool:
-#      vmImage: 'Ubuntu 16.04'
-#    steps:
-#      - template: steps/charts/validate.yaml@cnp-library
-#        parameters:
-#          chartName: ccd
-#          chartReleaseName: chart-ccd-ci-test
-#          chartNamespace: chart-tests
-#          helmInstallTimeout: "1000"
+  - job: Validate
+    pool:
+      vmImage: 'Ubuntu 16.04'
+    steps:
+      - template: steps/charts/validate.yaml@cnp-library
+        parameters:
+          chartName: finrem
+          chartReleaseName: chart-finrem-ci-test
+          chartNamespace: chart-tests
+          helmInstallTimeout: "1000"
 
   - job: Release
     # Make sure we have a tag to run this job
@@ -35,7 +34,7 @@ jobs:
           succeeded(),
           startsWith(variables['Build.SourceBranch'], 'refs/tags/')
         )
-#    dependsOn: Validate
+    dependsOn: Validate
     pool:
       vmImage: 'Ubuntu 16.04'
     steps:
