--- a/finrem/values.demo.yaml
+++ b/finrem/values.demo.yaml
@@ -1,2 +1,36 @@
 global:
   environment: demo
+  ai-key: '00000000-0000-0000-0000-000000000000'
+
+ccd:
+  ingressHost: cmc-ccd-chart.service.core-compute-preview.internal
+  idamApiUrl: https://idam-api.aat.platform.hmcts.net
+  idamWebUrl: https://idam-web-public.aat.platform.hmcts.net
+  s2sUrl: http://rpe-service-auth-provider-frdemo
+  draftStoreUrl: http://draft-store-service-frdemo
+  paymentsUrl: http://payment-api-frdemo
+  apiGateway:
+    s2sKey: AAAAAAAAAAAAAAAA
+    idamClientSecret:
+      fromSecret: true
+      secretKeyRefName: ccd-aat-ccd-api-gateway-oauth2-client-secret
+      secretKeyRefKey: key
+  dataStoreApi:
+    s2sKey: AAAAAAAAAAAAAAAA
+  definitionStoreApi:
+    s2sKey: AAAAAAAAAAAAAAAA
+  adminWeb:
+    s2sKey: AAAAAAAAAAAAAAAA
+    idamClientSecret:
+      fromSecret: true
+      secretKeyRefName: ccd-aat-ccd-admin-web-oauth2-client-secret
+      secretKeyRefKey: key
+  idam-pr:
+    releaseNameOverride: demo-v1-ccd-idam-pr
+    redirect_uris:
+      CCD:
+        - https://case-management-web-div-ccd-chart.service.core-compute-preview.internal/oauth2redirect
+      CCD Admin:
+        - https://admin-web-div-ccd-chart.service.core-compute-preview.internal/oauth2redirect
+   postgresql:
+    nameOverride: postgresql
